# kscord

./: .gitignore  .gitmodules  BUILD.gn  README.md  build.sh
src/kscord/: BUILD.gn  config.hpp  kscord.hpp  main.cpp
src/kscord/bot/: bot.hpp
src/kscord/client/: client.cpp  client.hpp
src/kscord/common/: constants.hpp  discord_util.hpp  interface.hpp  request.cpp  request.hpp  types.hpp  util.cpp  util.hpp
src/kscord/common/auth/: auth.hpp
test/ut_kscord/: BUILD.gn  kscord.test.cpp  kscord.test.hpp
