config("cpr_library") {
  include_dirs = [cpr_include]
  libs = ["cpr"]
  visibility = [ ":cpr_lib" ]
}

group("cpr_lib") {
  public_configs = [":cpr_library"]
}

config("inih") {
  include_dirs = [
    "//third_party/inih/cpp"
  ]
}

source_set("ini_reader") {
  sources = [
    "//third_party/inih/ini.c",
    "//third_party/inih/cpp/INIReader.cpp"
  ]
}

source_set("kscord_sources") {
  deps = [
    ":ini_reader",
  ]

  public_deps = [
    ":cpr_lib"
  ]

  public_configs = [
    ":inih"
  ]

  include_dirs = [
    "//src",
  ]

  sources = [
    "//src/kscord/client/client.cpp",
    "//src/kscord/common/util.cpp",
    "//src/kscord/common/request.cpp"
  ]
}

executable("kscord") {
  deps = [
    ":kscord_sources"
  ]

  include_dirs = [
    "//src",
  ]

  sources = [
    "//src/kscord/main.cpp"
  ]
}

shared_library("kscord_lib") {
  deps = [
    ":kscord_sources"
  ]

  include_dirs = [
    "//src",
  ]
}