executable("ut_kscord") {

  public_configs = [
    "//src/kscord:cpr"
  ]

  public_deps = [
    "//src/kscord:kscord_sources"
  ]

  testonly = true

  libs = [
    "cpr"
  ]


  deps = [
    "//test:gtest_main",
    "//test:gtest_and_gmock"
  ]

  include_dirs = [
    "//src",
    "//third_party/json/include",
  ]

  sources = [
    "kscord.test.cpp",
  ]
}
